--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.0.1'
     compile group: 'org.jgrapht', name: 'jgrapht-ext', version: '1.0.1'
     compile group: 'org.tinyjee.jgraphx', name: 'jgraphx', version: '3.4.1.3'
+    compile group: 'org.json', name: 'json', version: '20160810'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
